--- a/apply-now/loan-eligibility-check/index.htm
+++ b/apply-now/loan-eligibility-check/index.htm
@@ -469,7 +469,9 @@
                               alt=""
                             />
                           </div>
-                          <h4>We find an average of 2300 loans every day**</h4>
+                          <h4>
+                            We process an average of 3000 applications daily**
+                          </h4>
                         </div>
                       </div>
 
@@ -3468,8 +3470,8 @@
                           data-type="text"
                         >
                           <label for="" class="col col-sm-6 control-label"
-                            >Bank Account Number</label
-                          >
+                            >Bank Account Number (Can be provided later)
+                          </label>
 
                           <div class="col col-sm-6">
                             <input
@@ -3491,8 +3493,8 @@
                           data-type="text"
                         >
                           <label for="" class="col col-sm-6 control-label"
-                            >Bank Sort Code</label
-                          >
+                            >Bank Sort Code (Can be provided later)
+                          </label>
                           <div class="col col-sm-6">
                             <input
                               name="bank_account[sortcode]"
