--- a/quick-loans/urgent-loans/index.htm
+++ b/quick-loans/urgent-loans/index.htm
@@ -484,7 +484,7 @@
             </h4>
             <p class="lead">How much do you need?</p>
             <div class="apply-form clearfix">
-              <form action="../../apply-now/index.htm" method="get">
+              <form action="../../apply-now/index.htm/" method="get">
                 <div class="apply-input">
                   <a href="#" class="amount-change amount-minus"
                     ><i class="fa fa-minus"></i
@@ -600,7 +600,7 @@
             <div class="col col-sm-8 text-right">
               <p class="lead">How much do you need?</p>
               <div class="apply-form clearfix">
-                <form action="../../apply-now/index.htm" method="get">
+                <form action="../../apply-now/index.htm/" method="get">
                   <div class="apply-input">
                     <a href="#" class="amount-change amount-minus"
                       ><i class="fa fa-minus"></i
@@ -832,7 +832,7 @@
                     <h2>Apply Now</h2>
                     <p class="lead">How much do you need?</p>
                     <div class="apply-form clearfix">
-                      <form action="../../apply-now/index.htm" method="get">
+                      <form action="../../apply-now/index.htm/" method="get">
                         <div class="apply-input">
                           <a href="#" class="amount-change amount-minus"
                             ><i class="fa fa-minus"></i
@@ -1293,7 +1293,7 @@
                   <h3>Ready to Get Started?</h3>
                   <p class="lead">How much do you need?</p>
                   <div class="apply-form clearfix">
-                    <form action="../../apply-now/index.htm" method="get">
+                    <form action="../../apply-now/index.htm/" method="get">
                       <div class="apply-input">
                         <a href="#" class="amount-change amount-minus"
                           ><i class="fa fa-minus"></i
