--- a/same-day-loans/no-credit-check/index.htm
+++ b/same-day-loans/no-credit-check/index.htm
@@ -482,7 +482,7 @@
             </h4>
             <p class="lead">How much do you need?</p>
             <div class="apply-form clearfix">
-              <form action="../../apply-now/index.htm" method="get">
+              <form action="../../apply-now/index.htm/" method="get">
                 <div class="apply-input">
                   <a href="#" class="amount-change amount-minus"
                     ><i class="fa fa-minus"></i
@@ -598,7 +598,7 @@
             <div class="col col-sm-8 text-right">
               <p class="lead">How much do you need?</p>
               <div class="apply-form clearfix">
-                <form action="../../apply-now/index.htm" method="get">
+                <form action="../../apply-now/index.htm/" method="get">
                   <div class="apply-input">
                     <a href="#" class="amount-change amount-minus"
                       ><i class="fa fa-minus"></i
@@ -834,7 +834,7 @@
                     <h2>Apply Now</h2>
                     <p class="lead">How much do you need?</p>
                     <div class="apply-form clearfix">
-                      <form action="../../apply-now/index.htm" method="get">
+                      <form action="../../apply-now/index.htm/" method="get">
                         <div class="apply-input">
                           <a href="#" class="amount-change amount-minus"
                             ><i class="fa fa-minus"></i
@@ -1284,7 +1284,7 @@
                   <h3>Ready to Get Started?</h3>
                   <p class="lead">How much do you need?</p>
                   <div class="apply-form clearfix">
-                    <form action="../../apply-now/index.htm" method="get">
+                    <form action="../../apply-now/index.htm/" method="get">
                       <div class="apply-input">
                         <a href="#" class="amount-change amount-minus"
                           ><i class="fa fa-minus"></i
