--- a/bad-credit-loans/index.htm
+++ b/bad-credit-loans/index.htm
@@ -520,7 +520,7 @@
             </h4>
             <p class="lead">How much do you need?</p>
             <div class="apply-form clearfix">
-              <form action="../apply-now/index.htm/" method="get">
+              <form action="../apply-now/index.htm" method="get">
                 <div class="apply-input">
                   <a href="#" class="amount-change amount-minus"
                     ><i class="fa fa-minus"></i
@@ -833,7 +833,7 @@
                     <h2>Apply Now</h2>
                     <p class="lead">How much do you need?</p>
                     <div class="apply-form clearfix">
-                      <form action="../apply-now/index.htm/" method="get">
+                      <form action="../apply-now/index.htm" method="get">
                         <div class="apply-input">
                           <a href="#" class="amount-change amount-minus"
                             ><i class="fa fa-minus"></i
@@ -1541,7 +1541,7 @@
                   <h3>Ready to Get Started?</h3>
                   <p class="lead">How much do you need?</p>
                   <div class="apply-form clearfix">
-                    <form action="../apply-now/index.htm/" method="get">
+                    <form action="../apply-now/index.htm" method="get">
                       <div class="apply-input">
                         <a href="#" class="amount-change amount-minus"
                           ><i class="fa fa-minus"></i
