--- a/borrow-money/index.htm
+++ b/borrow-money/index.htm
@@ -473,7 +473,7 @@
             </h4>
             <p class="lead">How much do you need?</p>
             <div class="apply-form clearfix">
-              <form action="../apply-now/index.htm/" method="get">
+              <form action="../apply-now/index.htm" method="get">
                 <div class="apply-input">
                   <a href="#" class="amount-change amount-minus"
                     ><i class="fa fa-minus"></i
@@ -589,7 +589,7 @@
             <div class="col col-sm-8 text-right">
               <p class="lead">How much do you need?</p>
               <div class="apply-form clearfix">
-                <form action="../apply-now/index.htm/" method="get">
+                <form action="../apply-now/index.htm" method="get">
                   <div class="apply-input">
                     <a href="#" class="amount-change amount-minus"
                       ><i class="fa fa-minus"></i
@@ -821,7 +821,7 @@
                     <h2>Apply Now</h2>
                     <p class="lead">How much do you need?</p>
                     <div class="apply-form clearfix">
-                      <form action="../apply-now/index.htm/" method="get">
+                      <form action="../apply-now/index.htm" method="get">
                         <div class="apply-input">
                           <a href="#" class="amount-change amount-minus"
                             ><i class="fa fa-minus"></i
@@ -1288,7 +1288,7 @@
                   <h3>Ready to Get Started?</h3>
                   <p class="lead">How much do you need?</p>
                   <div class="apply-form clearfix">
-                    <form action="../apply-now/index.htm/" method="get">
+                    <form action="../apply-now/index.htm" method="get">
                       <div class="apply-input">
                         <a href="#" class="amount-change amount-minus"
                           ><i class="fa fa-minus"></i
