--- a/index.htm
+++ b/index.htm
@@ -472,7 +472,7 @@
             <h1><span>Payday loans from</span><br />£50 to £5000</h1>
             <p class="lead">How much do you need?</p>
             <div class="apply-form clearfix">
-              <form action="apply-now/index.htm/" method="get">
+              <form action="apply-now/index.htm" method="get">
                 <div class="apply-input">
                   <a href="#" class="amount-change amount-minus"
                     ><i class="fa fa-minus"></i
@@ -920,7 +920,7 @@
                   <h2>Apply Now</h2>
                   <p class="lead">How much do you need?</p>
                   <div class="apply-form clearfix">
-                    <form action="apply-now/index.htm/" method="get">
+                    <form action="apply-now/index.htm" method="get">
                       <div class="apply-input">
                         <a href="#" class="amount-change amount-minus"
                           ><i class="fa fa-minus"></i
@@ -1552,7 +1552,7 @@
                   <h3>Ready to Get Started?</h3>
                   <p class="lead">How much do you need?</p>
                   <div class="apply-form clearfix">
-                    <form action="apply-now/index.htm/" method="get">
+                    <form action="apply-now/index.htm" method="get">
                       <div class="apply-input">
                         <a href="#" class="amount-change amount-minus"
                           ><i class="fa fa-minus"></i
