--- a/jargon-buster/index.htm
+++ b/jargon-buster/index.htm
@@ -711,7 +711,7 @@
                       <h2>Apply Now</h2>
                       <p class="lead">How much do you need?</p>
                       <div class="apply-form clearfix">
-                        <form action="../apply-now/index.htm/" method="get">
+                        <form action="../apply-now/index.htm" method="get">
                           <div class="apply-input">
                             <a href="#" class="amount-change amount-minus"
                               ><i class="fa fa-minus"></i
@@ -1405,7 +1405,7 @@
                   <h3>Ready to Get Started?</h3>
                   <p class="lead">How much do you need?</p>
                   <div class="apply-form clearfix">
-                    <form action="../apply-now/index.htm/" method="get">
+                    <form action="../apply-now/index.htm" method="get">
                       <div class="apply-input">
                         <a href="#" class="amount-change amount-minus"
                           ><i class="fa fa-minus"></i
