--- a/sitemap/index.htm
+++ b/sitemap/index.htm
@@ -781,7 +781,7 @@
                   <h3>Ready to Get Started?</h3>
                   <p class="lead">How much do you need?</p>
                   <div class="apply-form clearfix">
-                    <form action="../apply-now/index.htm/" method="get">
+                    <form action="../apply-now/index.htm" method="get">
                       <div class="apply-input">
                         <a href="#" class="amount-change amount-minus"
                           ><i class="fa fa-minus"></i
