add page plasma credit check

--- a/apply-now/index.htm
+++ b/apply-now/index.htm
@@ -102,6 +102,10 @@ var ForceInlineSVGActive = "false";
             xmlHttp.send(parameters);
         }
 
+        function handleClick() {
+            document.location = "../plasma-credit-check/index.htm"
+        }
+
     </script>
             <style>
             .ginger_container.light {
@@ -1738,7 +1742,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                         <p>Licenced by the FCA & Information Commissioners Office</p>
                                     </div>
                                 </div>
-                                <button tabindex="124" class="btn btn-default btn-form-complete">Get Your Loan Quote<small>No obligation, 100% secure</small></button>
+                                <button onclick="handleClick();" tabindex="124" class="btn btn-default btn-form-complete">Get Your Loan Quote<small>No obligation, 100% secure</small></button>
 
                             </div>
 
