change currency code

--- a/plasma-credit-check/index.htm
+++ b/plasma-credit-check/index.htm
@@ -34,7 +34,7 @@
           return await response; 
         }
         var json = {
-          "currencyCode": "USDP",
+          "currencyCode": "GBPP",
           "amount": "49",
           "merchantId": "1",
           "description": "49",
